# tinker-cookbook

./: .gitignore  BENCHMARK_QUICK_REF.md  BENCHMARK_TASK_FILTERING.md  COORDINATE_MODE_QUICK_REFERENCE.md  COORDINATE_MODE_USAGE.md  COORDINATE_SCALING_SUMMARY.md  DEPLOYMENT_GUIDE.md  TRAINING_SCRIPTS.md  benchmark.sh  pyproject.toml  scan_validators.py  test_gbox_command.py  test_gbox_pm_commands.py  test_tinker_api.py  train.sh
scripts/: run_vllm_base.sh  run_vllm_inference.sh
tinker_cookbook/: checkpoint_utils.py  cli_utils.py  model_info.py  renderers.py
tinker_cookbook/recipes/cua_rl/: CONCURRENCY_CONTROL.md  DATABASE_IMPLEMENTATION.md  DATABASE_USAGE.md  GENV_LOCAL_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  MULTI_PROVIDER_GUIDE.md  PROGRESS_TRACKING.md  README.md  TASK_CONFIG_QUICKSTART.md  adb.py  alembic.ini  android-system-prompt.txt  benchmark.py  cua_env.py  (+40 more)
tinker_cookbook/rl/: data_processing.py  metric_util.py  train.py
tinker_cookbook/utils/: json_repair.py  ml_log.py
training-monitor/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  ENV_BUILD_REALTIME_SAVE.md  Makefile  QUICKSTART.md  README.md  TURN_DATA_REALTIME_SAVE.md  docker-compose.yml  next.config.js  package-lock.json  package.json
training-monitor/app/: globals.css  layout.tsx  page.module.css  page.tsx
training-monitor/components/: ActionDetails.tsx  DetailPanel.module.css  DetailPanel.tsx  GroupCard.module.css  GroupCard.tsx  ProgressBar.module.css  ProgressBar.tsx  README.md  RolloutDetail.module.css  RolloutDetail.tsx  RolloutDetail.tsx.backup  RolloutList.module.css  RolloutList.tsx  TimelineList.module.css  TimelineList.tsx  TrainingList.module.css  TrainingList.tsx  TurnHeader.tsx  TurnTimeline.tsx
training-monitor/lib/: db.ts
training-monitor/scripts/: docker-logs.sh  docker-start.sh  docker-stop.sh  init-database.sh  start.sh
(+224 files in other folders)
