[project]
name = "tinker_cookbook"
version = "0.1.0"
description = "Implementations of post-training algorithms using the Tinker API"
readme = "README.md"
authors = [
{ name = "Tinker authors", email = "tinker@thinkingmachines.ai" },
]
requires-python = ">=3.11"
dependencies = [
    "chz",
    "cloudpickle",
    "datasets",
    "numpy",
    "pillow",
    "rich",
    "termcolor",
    "tinker>=0.6.1",
    "torch",
    "torchvision",
    "transformers>=4.57.1",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena>=0.7.4",
    "math-verify",
    "scipy",
]

[project.urls]
Homepage = "https://thinkingmachines.ai/tinker"
Repository = "https://github.com/thinking-machines-lab/tinker"
Documentation = "https://tinker-docs.thinkingmachines.ai/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
vector-search = [
    "chromadb",
    "google-genai",
    "huggingface_hub"
]
wandb = [
    "wandb",
]
neptune-scale = [
    "neptune-scale>=0.27.0",
]
trackio = [
    "trackio<1.0.0",
]
verifiers = [
    "verifiers>=0.1.8.post0",
    "openai",
]
cua = [
    "gbox-sdk",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary",
    "alembic>=1.13.0",
]

all = [
    "tinker_cookbook[vector-search]",
    "tinker_cookbook[wandb]",
    "tinker_cookbook[neptune-scale]",
    "tinker_cookbook[trackio]",
    "tinker_cookbook[verifiers]",
    "tinker_cookbook[cua]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinker_cookbook"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
